Fix attempt for modal on mobile (attempt 3)

--- a/styles.css
+++ b/styles.css
@@ -218,11 +218,21 @@ template {
 
 html {
     background: var(--color-bg-primary);
+    height: -webkit-fill-available;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    height: -webkit-fill-available;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
     display: grid;
-    height: 100vh;
+    height: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 40px 1fr 30px;
 }
@@ -954,7 +964,6 @@ button#remove_btn:hover::before {
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        padding: 0 30px;
 
         position: fixed;
         top: 50%;
